# Compilators

./: .gitignore  CMakeLists.txt  Dockerfile  LexParser.cpp  LexType.h  README.md
CodeExamples/: Example.cs  Example1.cs
Scann/: Scanner.cpp  Scanner.h
TextDriver/: Driver.cpp  Driver.h
error/: Error.cpp  Error.h
frequent/: Freq.cpp  Freq.h
x64/Debug/: LexParser.exe.recipe
